--- a/heavycenter/src/main/res/layout/item_main_order_done.xml
+++ b/heavycenter/src/main/res/layout/item_main_order_done.xml
@@ -13,10 +13,10 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="10dp"
+        android:paddingLeft="15dp"
         android:paddingRight="10dp"
         android:paddingTop="15dp"
-        android:paddingBottom="10dp">
+        android:paddingBottom="15dp">
 
         <LinearLayout
             android:orientation="horizontal"
@@ -36,7 +36,7 @@
                         android:id="@+id/tv_goodname"
                         android:singleLine="true"
                         android:textColor="@color/white"
-                        android:textSize="18sp"
+                        android:textSize="@dimen/hv_dimen_text_title_aaaaa"
                         android:text="混凝土"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
@@ -46,14 +46,14 @@
                         android:singleLine="true"
                         android:layout_marginLeft="10dp"
                         android:textColor="@color/white"
-                        android:textSize="18sp"
+                        android:textSize="@dimen/hv_dimen_text_aaa"
                         android:text="D150"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="7dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <TextView
@@ -61,7 +61,7 @@
                         android:background="@drawable/bg_hv_sharp2_blue_solid"
                         android:singleLine="true"
                         android:textColor="@color/white"
-                        android:textSize="12sp"
+                        android:textSize="13sp"
                         android:text="来自"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
@@ -70,7 +70,7 @@
                         android:singleLine="true"
                         android:layout_marginLeft="10dp"
                         android:textColor="@color/white"
-                        android:textSize="15sp"
+                        android:textSize="16sp"
                         android:text="上海绿地"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
@@ -78,6 +78,8 @@
             </LinearLayout>
 
             <LinearLayout
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
                 android:layout_marginLeft="10dp"
                 android:background="@drawable/bg_hv_sharp2_yell_stroke"
                 android:orientation="vertical"
@@ -87,104 +89,108 @@
                     android:id="@+id/tv_carno"
                     android:singleLine="true"
                     android:textColor="@color/color_base_txt_heavycenter_y"
-                    android:textSize="8.5sp"
+                    android:textSize="12sp"
                     android:text=" 沪A2345 "
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
+
+                <TextView
+                        android:id="@+id/tv_plan"
+                        android:singleLine="true"
+                        android:textColor="@color/color_base_txt_heavycenter_y"
+                        android:textSize="12sp"
+                        android:text=" 沪A2345 "
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
             </LinearLayout>
         </LinearLayout>
         <LinearLayout
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="8dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <LinearLayout
-                android:layout_gravity="center"
+                android:layout_gravity="bottom"
                 android:orientation="horizontal"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content">
                 <TextView
                     android:layout_gravity="center_vertical"
-                    android:gravity="center_vertical|right"
+                    android:gravity="bottom|left"
                     android:singleLine="true"
                     android:textColor="@color/white"
-                    android:textSize="13sp"
+                    android:textSize="15sp"
                     android:text="实发："
-                    android:layout_weight="1"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
                 <TextView
                     android:id="@+id/tv_sf"
-                    android:layout_gravity="center_vertical|left"
+                    android:layout_gravity="bottom|left"
                     android:gravity="center"
                     android:singleLine="true"
                     android:textColor="@color/white"
-                    android:textSize="13sp"
+                    android:textSize="16sp"
                     android:text="2000t"
-                    android:layout_weight="1"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
             </LinearLayout>
 
             <LinearLayout
-                android:layout_gravity="center"
+                android:layout_gravity="bottom"
                 android:orientation="horizontal"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content">
                 <TextView
-                    android:layout_gravity="center_vertical"
-                    android:gravity="center_vertical|right"
+                    android:layout_gravity="bottom"
+                    android:gravity="bottom|right"
                     android:singleLine="true"
                     android:textColor="@color/white"
-                    android:textSize="13sp"
+                    android:textSize="15sp"
                     android:text="实收："
-                    android:layout_weight="1"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
                 <TextView
                     android:id="@+id/tv_ss"
-                    android:layout_gravity="center_vertical|left"
+                    android:layout_gravity="bottom|left"
                     android:gravity="center"
                     android:singleLine="true"
                     android:textColor="@color/white"
-                    android:textSize="13sp"
+                    android:textSize="22sp"
                     android:text="2000t"
-                    android:layout_weight="1"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
             </LinearLayout>
 
             <LinearLayout
-                android:layout_gravity="center"
+                    android:gravity="right"
+                android:layout_gravity="bottom|right"
                 android:orientation="horizontal"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content">
                 <TextView
-                    android:layout_gravity="center_vertical"
-                    android:gravity="center_vertical|right"
+                    android:layout_gravity="bottom"
+                    android:gravity="bottom|right"
                     android:singleLine="true"
                     android:textColor="@color/white"
-                    android:textSize="13sp"
+                    android:textSize="15sp"
                     android:text="盈亏："
-                    android:layout_weight="1"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
                 <TextView
                     android:id="@+id/tv_yk"
-                    android:layout_gravity="center_vertical|left"
+                    android:layout_gravity="bottom|right"
                     android:gravity="center"
                     android:singleLine="true"
                     android:textColor="@color/white"
-                    android:textSize="13sp"
+                    android:textSize="16sp"
                     android:text="2000t"
-                    android:layout_weight="1"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
             </LinearLayout>
         </LinearLayout>
