--- a/heavycenter/src/main/res/layout/frag_main_store_detail.xml
+++ b/heavycenter/src/main/res/layout/frag_main_store_detail.xml
@@ -33,8 +33,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
         <LinearLayout
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:paddingTop="10dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
@@ -42,7 +42,7 @@
             <TextView
                 android:singleLine="true"
                 android:textColor="@color/white"
-                android:textSize="18sp"
+                android:textSize="@dimen/hv_dimen_text_title_aaaaa"
                 android:text="@{StringUtil.getStr(frag_main_store_detail.warehouseName)}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -51,7 +51,7 @@
                 android:singleLine="true"
                 android:layout_marginLeft="14dp"
                 android:textColor="@color/white"
-                android:textSize="18sp"
+                android:textSize="@dimen/hv_dimen_text_aaa"
                 android:text="@{StringUtil.getStr(frag_main_store_detail.productName)}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -81,14 +81,13 @@
             android:layout_height="wrap_content"/>
 
         <LinearLayout
-            android:background="@color/color_grey_300"
+            android:background="@color/color_grey_200"
             android:layout_marginTop="80dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <LinearLayout
-
-                android:paddingTop="10dp"
+                android:paddingTop="15dp"
                 android:paddingBottom="10dp"
                 android:background="@drawable/bg_hv_sharp2_white_solid"
                 android:layout_marginTop="10dp"
@@ -102,7 +101,7 @@
                 android:layout_height="wrap_content">
                 <TextView
                     android:textColor="#f6ab12"
-                    android:textSize="22sp"
+                    android:textSize="28sp"
                     android:text='@{StringUtil.getStr(frag_main_store_detail.todayStorage)+"t"}'
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
@@ -115,7 +114,7 @@
 
             </LinearLayout>
             <LinearLayout
-                android:paddingTop="10dp"
+                    android:paddingTop="15dp"
                 android:paddingBottom="10dp"
                 android:background="@drawable/bg_hv_sharp2_white_solid"
                 android:layout_marginTop="10dp"
@@ -129,7 +128,7 @@
                 android:layout_height="wrap_content">
                 <TextView
                     android:textColor="#30e5a3"
-                    android:textSize="22sp"
+                    android:textSize="28sp"
                     android:text='@{StringUtil.getStr(frag_main_store_detail.todayOutStorage)+"t"}'
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
@@ -143,7 +142,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:paddingTop="10dp"
+                android:paddingTop="15dp"
                 android:paddingBottom="10dp"
                 android:background="@drawable/bg_hv_sharp2_white_solid"
                 android:layout_marginTop="10dp"
@@ -157,7 +156,7 @@
                 android:layout_height="wrap_content">
                 <TextView
                     android:textColor="#ff6600"
-                    android:textSize="22sp"
+                    android:textSize="28sp"
                     android:text='@{StringUtil.getStr(frag_main_store_detail.todayProfitNum)+"t"}'
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
@@ -175,8 +174,8 @@
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:background="@color/color_grey_400"
+            android:layout_height="50dp"
+            android:background="@color/color_grey_300"
             >
             <TextView
                 android:layout_weight="1"
