--- a/heavycenter/src/main/res/layout/item_main_store_detail_top.xml
+++ b/heavycenter/src/main/res/layout/item_main_store_detail_top.xml
@@ -28,8 +28,9 @@
             android:layout_marginTop="45dp"
             android:orientation="vertical"
             android:layout_width="wrap_content"
-            android:layout_height="50dp">
+            android:layout_height="wrap_content">
             <TextView
+                    android:singleLine="true"
                 android:id="@+id/tv_minwuliao"
                 android:textSize="@dimen/hv_dimen_text"
                 android:textColor="@color/white"
@@ -37,6 +38,7 @@
                 android:layout_height="wrap_content" />
 
             <TextView
+                    android:singleLine="true"
                 android:id="@+id/tv_minstore"
                 android:textColor="@color/white"
                 android:textSize="@dimen/hv_dimen_text_date"
@@ -54,8 +56,9 @@
             android:layout_alignParentRight="true"
             android:orientation="vertical"
             android:layout_width="wrap_content"
-            android:layout_height="50dp">
+            android:layout_height="wrap_content">
             <TextView
+                    android:singleLine="true"
                 android:id="@+id/tv_maxwuliao"
                 android:textSize="@dimen/hv_dimen_text"
                 android:textColor="@color/white"
@@ -63,6 +66,7 @@
                 android:layout_height="wrap_content" />
 
             <TextView
+                    android:singleLine="true"
                 android:gravity="center_vertical"
                 android:id="@+id/tv_maxstore"
                 android:textSize="@dimen/hv_dimen_text"
@@ -72,6 +76,7 @@
         </LinearLayout>
 
         <TextView
+                android:singleLine="true"
             android:visibility="gone"
             android:gravity="center_vertical"
             android:id="@+id/tv_current"
@@ -80,7 +85,7 @@
             android:textSize="14sp"
             android:textColor="@color/black"
             android:layout_width="wrap_content"
-            android:layout_height="30dp" />
+            android:layout_height="wrap_content" />
 
     </RelativeLayout>
 </layout>
